--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "pinetrees",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -125,5 +125,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
